--- a/src/index.css
+++ b/src/index.css
@@ -6,7 +6,7 @@
   }
 
   body {
-    @apply grid place-items-center min-w-[320px] min-h-screen relative m-0;
+    @apply grid  min-w-[320px] min-h-screen relative m-0;
   }
 }
 
@@ -16,7 +16,7 @@ body::before {
   inset: 0;
   z-index: -1;
   opacity: 0.05;
-  background: url("./logo.svg");
+  background: url("./chudjak.svg");
   background-size: 256px;
   transform: rotate(-12deg) scale(1.35);
   animation: slide 30s linear infinite;
